--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,4 +10,10 @@ main:
   - name: Partitura
     url : partitura/
     weight: 30
+  - name: BasisMixer
+    url : basismixer/
+    weight: 40
+  - name: ACCompanion
+    url : accompanion/
+    weight: 50
 
