simplify and complete pages

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,4 +16,11 @@ main:
   - name: ACCompanion
     url : accompanion/
     weight: 50
+  - name: Parangonar
+    url : parangonar/
+    weight: 60
+  - name: Links
+    url : tools/
+    weight: 70
+
 
